@@ -8,6 +8,8 @@ Changes - Apache mod_perl change logfile
 
 =item 1.20_01-dev
 
+added StatusLexInfo option to Apache::Status
+
 =item 1.20 - June 11, 1999
 
 turn off warnings in Apache::Status::as_HTML symdump code
